# final_assignment2

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
agent/: cli.py  main.py
agent/config/: settings.py
agent/core/: db.py  graph.py  guardrails.py  ingestion.py  llm.py  nodes.py  retrieval.py  state.py  telemetry.py
migrations/: 002_init_table.sql
scripts/: ingestion.py
scripts/ingestion/: embeddings.py  ingestion.py  main.py
