[project]
name = "final-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "pre-commit>=4.4.0",
    "pydantic-settings>=2.12.0",
    "pyright>=1.1.407",
    "python-dotenv>=1.2.1",
]

[tool.pyright]
exclude = [
    ".venv",
    "gymhero"
]