[project]
name = "final-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "pre-commit>=4.4.0",
    "pydantic-settings>=2.12.0",
    "pyright>=1.1.407",
    "python-dotenv>=1.2.1",
    "pgvector>=0.2.5",
    "tiktoken>=0.7.0",
    "langfuse>=2.54.0",
    "psycopg2-binary>=2.9.11",
    "langchain>=1.0.7",
]

[tool.pyright]
exclude = [
    ".venv",
    "gymhero"
]
